feat(cross): #2220.12 authz and org png
- Grant admins access to all organizations
- Add the script to generate the organization PNG and upload it
  to S3


Former-commit-id: 11ad01cbbe22a072c90425db2777682f1249e9ae

--- a/app/templates/graphics-for-entity.html
+++ b/app/templates/graphics-for-entity.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Graphics for group</title>
+    <title>Graphics for {{ entity }}</title>
 
     <!-- Local Styles -->
     {% if 'localhost' in request.get_host and debug %}
