--- a/app/templates/graphic-error.html
+++ b/app/templates/graphic-error.html
@@ -3,10 +3,22 @@
   <head>
     <title>Error</title>
     <meta charset="utf-8">
+    <style>
+      textarea {
+        border: 0;
+        height: 100%;
+        left: 0;
+        margin: 0;
+        padding: 0;
+        position: fixed;
+        top: 0;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     {% if debug %}
-      {{ exception }}
+      <textarea readonly>{{ traceback }}</textarea>
     {% endif %}
   </body>
 </html>
