--- a/app/templates/graphics-for-entity.html
+++ b/app/templates/graphics-for-entity.html
@@ -7,9 +7,9 @@
 
     <!-- Local Styles -->
     {% if 'localhost' in request.get_host and debug %}
-      <link rel="stylesheet" href="https://localhost:3000/dashboard/graphicsForGroup-style.min.css" type="text/css">
+      <link rel="stylesheet" href="https://localhost:3000/dashboard/graphicsFor{{ entity }}-style.min.css" type="text/css">
     {% else %}
-      <link rel="stylesheet" href="{% static 'dashboard/graphicsForGroup-style.min.css' %}" type="text/css">
+      <link rel="stylesheet" href="{% static 'dashboard/graphicsFor{{ entity }}-style.min.css' %}" type="text/css">
     {% endif %}
 
     <!-- Third party styles -->
@@ -20,9 +20,9 @@
 
     <!-- Scripts -->
     {% if 'localhost' in request.get_host and debug %}
-      <script src="https://localhost:3000/dashboard/graphicsForGroup-bundle.min.js" type="text/javascript"></script>
+      <script src="https://localhost:3000/dashboard/graphicsFor{{ entity }}-bundle.min.js" type="text/javascript"></script>
     {% else %}
-      <script src="{% static 'dashboard/graphicsForGroup-bundle.min.js' %}" type="text/javascript"></script>
+      <script src="{% static 'dashboard/graphicsFor{{ entity }}-bundle.min.js' %}" type="text/javascript"></script>
     {% endif %}
   </body>
 </html>
