refac(cross): #3489.1 santaularia-review-web
- The changes suggested by Santaularia were implemented on some pages


Former-commit-id: d922541a6f5a4b01ac9fcf264b8ec5df9370cd4a

--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -94,8 +94,8 @@
         <li>
           <a class="no-underline" href="{{ SITEURL }}/products/integrates/">
             <p class="c-fluid-bk roboto fw1 tl f4 lh-2">
-              <strong class="b">Integrates</strong> is a platform that stores vulnerabilities and gives you
-              access to their evidence in different phases and in real-time.
+              <strong class="b">Integrates</strong> is a platform that stores vulnerabilities
+              and gives you access to their evidence in different phases and in real time.
               You can easily and quickly classify and prioritize them,
               define their treatments, and check the status and progress of their
               remediation.
@@ -237,10 +237,10 @@
       <ul class="list fr-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
         <li>
           <p class="roboto fw1 tl f3-ns f5 lh-2">
-            All vulnerabilities and security issues are continuously detected
+            Vulnerabilities and security issues are continuously detected
             and reported during the entire software development cycle.
             Fluid Attacks runs comprehensive testing
-            through SAST, DAST, IAST, and SCA techniques,
+            through SAST, DAST, IAST and SCA techniques,
             detecting all vulnerabilities with no false positives.
           </p>
         </li>
@@ -276,9 +276,9 @@
       <ul class="list fr-l w-40-l w-70-m w-100 pl0-l ph3 center tl-ns tc">
         <li>
           <p class="roboto fw1 tl f3-ns f5 lh-2">
-            Fluid Attacks detects and reports all vulnerabilities within one
+            Fluid Attacks detects and reports vulnerabilities within one
             specific version of your application. All existing vulnerabilities
-            are detected, with no false positives.
+            are detected with no false positives.
           </p>
         </li>
         <li class="pt4-l">
@@ -316,7 +316,7 @@
         <p class="roboto fw1 tl f3-ns f5 lh-2 mt2">
           Since 2001, Fluid Attacks has been developing cybersecurity products
           and providing solutions for clients in industries like technology,
-          banking, finance, healthcare, insurance, airlines, and retail.
+          banking, finance, healthcare, insurance, airlines and retail.
           Fluid Attacks' security experts work closely with organizations
           to ensure that their systems' vulnerabilities are recognized,
           with no false positives and no false negatives,
@@ -399,7 +399,7 @@
 </div>
 <div class="asap-bg asap-bg-s coverm cover-s justify-center items-center flex bg-center">
   <p class="white f2-ns f3 tc roboto b mv0">
-    We Find All Vulnerabilities and Report Them ASAP
+    We find all vulnerabilities and report them ASAP
   </p>
 
 </div>
