--- a/new/theme/2020/templates/products/integrates.html
+++ b/new/theme/2020/templates/products/integrates.html
@@ -148,7 +148,7 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/integrates/integrates-8.png"
         alt="Young hacker smiling">
         <p class="roboto fw1 c-lightblack f5 lh-2">
-          Fluid Attacks has available the Integrates-App <br>
+          Fluid Attacks offers the Integrates-App <br>
           (on Android and iOS) for executive control<br>
           of processes. It shows you the most crucial<br>
           indicator: vulnerability remediation rate on<br>
@@ -186,7 +186,7 @@
         <p class="roboto fw1 c-lightblack f5 lh-2">
           Establish quick communication with and <br>
           receive important notifications from <br>
-          Fluid Attacks' team <br>
+          the Fluid Attacks' team <br>
           (when you purchase Drills). <br>
           <br>
         </p>
