--- a/app/templates/graphics-for-entity.html
+++ b/app/templates/graphics-for-entity.html
@@ -9,7 +9,9 @@
     {% if 'localhost' in request.get_host and debug %}
       <link rel="stylesheet" href="https://localhost:3000/dashboard/graphicsFor{{ entity }}-style.min.css" type="text/css">
     {% else %}
-      <link rel="stylesheet" href="{% static 'dashboard/graphicsFor{{ entity }}-style.min.css' %}" type="text/css">
+      {% with 'dashboard/graphicsFor'|add:entity|add:'-style.min.css' as url %}
+        <link rel="stylesheet" href="{% static url %}" type="text/css">
+      {% endwith %}
     {% endif %}
 
     <!-- Third party styles -->
@@ -22,7 +24,9 @@
     {% if 'localhost' in request.get_host and debug %}
       <script src="https://localhost:3000/dashboard/graphicsFor{{ entity }}-bundle.min.js" type="text/javascript"></script>
     {% else %}
-      <script src="{% static 'dashboard/graphicsFor{{ entity }}-bundle.min.js' %}" type="text/javascript"></script>
+      {% with 'dashboard/graphicsFor'|add:entity|add:'-bundle.min.js' as url %}
+        <script src="{% static url %}" type="text/javascript"></script>
+      {% endwith %}
     {% endif %}
   </body>
 </html>
