fix(front): #3495 remove margin in logo
Former-commit-id: b73a1747d7808155902e466b5d5c25509577a8b0

--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -3,7 +3,7 @@
     <ul class="list ma0 pa0 overflow-hidden">
       <li class="fl">
         <a class="db tc pa1 no-underline" href="{{ SITEURL }}/">
-          <img loading="lazy" class="w5-l w-logo ml5-l ml3 mv2 absolute"
+          <img loading="lazy" class="w5-l w-logo ml3 mv2 absolute"
             src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg" alt="Young hacker smiling">
         </a>
       </li>
