fix(front): #3482 remove outline from links
Former-commit-id: a2c2b895c7d6cfcf6bafbafed1c744f94a695d58

--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -220,37 +220,37 @@
       <li class="relative fr mt-menu mr3 mv4-l pv3-l pv-4-m db-l dn">
         <a class="tc no-underline c-fluid-bk f6 fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/contact-us/">
-          <button class="br2 ph2 pv1 bg-white bc-fluid-red ba hv-fluid-rd hv-fluid-bd bt-trans c-dkred pointer">CONTACT</button>
+          <button class="outline-transparent br2 ph2 pv1 bg-white bc-fluid-red ba hv-fluid-rd hv-fluid-bd bt-trans c-dkred pointer">CONTACT</button>
         </a>
       </li>
       <li class="db-ns dn relative fr mt-menu mr3 pr2 mv4-l mv3 pv3-l pv-4-m">
         <a class="tc no-underline c-fluid-bk f6 fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="https://fluidattacks.com/integrates">
-          <button class="bn ph0 pv1 hv-fluid-rd bg-transparent pointer">LOGIN</button>
+          <button class="outline-transparent bn ph0 pv1 hv-fluid-rd bg-transparent pointer">LOGIN</button>
         </a>
       </li>
       <li class="db-xl display-none relative fr mt-menu mr3 pr2 mv4-l mv3 pv3-l pv-4-m">
         <a class="tc no-underline c-fluid-bk f6 fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/blog/">
-          <button class="bn ph0 pv1 hv-fluid-rd bg-transparent pointer">BLOG</button>
+          <button class="outline-transparent bn ph0 pv1 hv-fluid-rd bg-transparent pointer">BLOG</button>
         </a>
       </li>
       <li class="db-xl display-none relative fr mt-menu mr3 pr2 mv4-l mv3 pv3-l pv-4-m">
         <a class="tc no-underline c-fluid-bk f6 fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/resources/">
-          <button class="bn ph0 pv1 hv-fluid-rd bg-transparent pointer">RESOURCES</button>
+          <button class="outline-transparent bn ph0 pv1 hv-fluid-rd bg-transparent pointer">RESOURCES</button>
         </a>
       </li>
       <li class="db-xl display-none relative fr mt-menu mr3 pr2 mv4-l mv3 pv3-l pv-4-m">
         <a class="tc no-underline c-fluid-bk f6 fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/products/">
-          <button class="bn ph0 pv1 hv-fluid-rd bg-transparent pointer">PRODUCTS</button>
+          <button class="outline-transparent bn ph0 pv1 hv-fluid-rd bg-transparent pointer">PRODUCTS</button>
         </a>
       </li>
       <li class="db-l dn relative fr mt-menu mr3 pr2 mv4-l mv3 pv3-l pv-4-m">
         <a class="tc no-underline c-fluid-bk f6 fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/use-cases/continuous-hacking/">
-          <button class="bn ph0 pv1 hv-fluid-rd bg-transparent pointer">USE CASES</button>
+          <button class="outline-transparent bn ph0 pv1 hv-fluid-rd bg-transparent pointer">USE CASES</button>
         </a>
       </li>
     </ul>
