--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -169,8 +169,8 @@
       </div>
       <div class="clutch-frame pr3 pt3">
         <script type="text/javascript" src="https://static1.clutch.co/api/widget.js"></script>
-        <div class="clutch-widget tl" data-url="https://clutch.co" data-widget-type="3" data-height="350"
-        data-clutchcompany-id="488256"></div>
+        <div class="clutch-widget" data-url="https://clutch.co" data-widget-type="1" data-height="50"
+             data-clutchcompany-id="488256"></div>
       </div>
     </div>
   </div>
