--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -218,37 +218,37 @@
         </label>
       </li>
       <li class="relative fr mt-menu mr3 mv4-l pv3-l pv-4-m db-l dn">
-        <a class="tc no-underline c-fluid-bk f6 fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
+        <a class="tc no-underline c-fluid-bk f-key-features fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/contact-us/">
           <button class="outline-transparent br2 ph2 pv1 bg-white bc-fluid-red ba hv-fluid-rd hv-fluid-bd bt-trans c-dkred pointer">CONTACT</button>
         </a>
       </li>
       <li class="db-ns dn relative fr mt-menu mr3 pr2 mv4-l mv3 pv3-l pv-4-m">
-        <a class="tc no-underline c-fluid-bk f6 fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
+        <a class="tc no-underline c-fluid-bk f-key-features fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="https://fluidattacks.com/integrates">
           <button class="outline-transparent bn ph0 pv1 hv-fluid-rd bg-transparent pointer">LOGIN</button>
         </a>
       </li>
       <li class="db-xl display-none relative fr mt-menu mr3 pr2 mv4-l mv3 pv3-l pv-4-m">
-        <a class="tc no-underline c-fluid-bk f6 fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
+        <a class="tc no-underline c-fluid-bk f-key-features fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/blog/">
           <button class="outline-transparent bn ph0 pv1 hv-fluid-rd bg-transparent pointer">BLOG</button>
         </a>
       </li>
       <li class="db-xl display-none relative fr mt-menu mr3 pr2 mv4-l mv3 pv3-l pv-4-m">
-        <a class="tc no-underline c-fluid-bk f6 fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
+        <a class="tc no-underline c-fluid-bk f-key-features fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/resources/">
           <button class="outline-transparent bn ph0 pv1 hv-fluid-rd bg-transparent pointer">RESOURCES</button>
         </a>
       </li>
       <li class="db-xl display-none relative fr mt-menu mr3 pr2 mv4-l mv3 pv3-l pv-4-m">
-        <a class="tc no-underline c-fluid-bk f6 fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
+        <a class="tc no-underline c-fluid-bk f-key-features fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/products/">
           <button class="outline-transparent bn ph0 pv1 hv-fluid-rd bg-transparent pointer">PRODUCTS</button>
         </a>
       </li>
       <li class="db-l dn relative fr mt-menu mr3 pr2 mv4-l mv3 pv3-l pv-4-m">
-        <a class="tc no-underline c-fluid-bk f6 fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
+        <a class="tc no-underline c-fluid-bk f-key-features fw4 menu-txt-trans roboto hv-fluid-rd nt-menu"
             href="{{ SITEURL }}/use-cases/continuous-hacking/">
           <button class="outline-transparent bn ph0 pv1 hv-fluid-rd bg-transparent pointer">USE CASES</button>
         </a>
