fix(front): #3487 change button component
- Change the button component in the blog index


Former-commit-id: 65eaa46881de55b2b402742c81731da0c3d6a82c

--- a/new/theme/2020/templates/index.html
+++ b/new/theme/2020/templates/index.html
@@ -112,12 +112,9 @@ Blog | {{ SITENAME }}
         <br><br>
         <!-- Read More Button -->
         <div class="divread bottom-2 pb3 absolute-l tc right-0 left-0 pb4">
-          <span class="br2 bannerbt hv-bt-fluid-rd ph4-l ph5 pv2 bt-trans white b roboto pointer">
-            <a href="{{ SITEURL }}/{{ article.url }}"
-               class="b f5 no-underline white">
-               Read More
-            </a>
-          </span>
+          <a href="{{ SITEURL }}/{{ article.url }}">
+            <button class="bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 mt3 dib bt-trans br2 bc-fluid-red ba">Read More</button>
+          </a>
         </div>
       </div>
     </div>
