fix(front): #3447 change size of the search icon
Former-commit-id: e78d21c878985dbd2efa9d58043f8de5212fc498

--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -211,7 +211,7 @@
         <label for="tipue_search_input"
           class="search-box-label">
           <span>
-            <img class="search-icon relative w-search-icon z-2 pointer ph2-l h-search-icon"
+            <img class="search-icon relative w-search-icon z-2 pointer ph2-l h-search-icon pv1-l"
                 src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/search.svg"
                 alt="Magnifying glass">
           </span>
