--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -7,11 +7,11 @@
             src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/logo-menu-new.svg" alt="Young hacker smiling">
         </a>
       </li>
-      <li class="fr">
+      <li class="relative fr mv4-l mv3 mr5-l right-small pv3-l pv-4-m">
         <input type="checkbox" id="op" class="dn" />
-        <div class="lower w1 absolute right-small mr5-l">
-          <label for="op" class="w2-l w1 absolute right-small pointer z-100 mv4-l pv2-l mv3 pv-4-m">
-            <img loading="lazy" class="lower-img mt-menu-bt" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/menu.svg"
+        <div class="lower">
+          <label for="op" class="pointer dib h2-l">
+            <img loading="lazy" class="nt-menu-btn pv0-l pv1 w-menu-bt lower-img w2-l relative ph2" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/menu.svg"
               alt="Young hacker smiling">
             </label>
         </div>
@@ -20,7 +20,7 @@
             <label for="op" class="mr5-l right-small">
               <img
                 loading="lazy"
-                class="lower-img w2-l w1 mv4-l pv2-l mv3 pv-4-m right-0 pointer z-100 relative"
+                class="lower-img w2-l w-menu-bt mv4-l pv2-l mv3 pv-4-m right-0 pointer z-100 relative"
                 src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/cross.png"
                 alt="Young hacker smiling">
             </label>
@@ -207,7 +207,7 @@
         </div>
       </li>
       <!-- Searching features -->
-      <li class="relative fr mv4-l mv3 mr6-l mr5 pv3-l pv-4-m">
+      <li class="relative fr mt-menu mr4 mv4-l pv3-l pv-4-m">
         <label for="tipue_search_input"
           class="search-box-label">
           <span>
