fix(front): #3486 add ebook section in home
Former-commit-id: ab3873226ca27c9dae9f0043dd23dbfc58372391

--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -303,6 +303,19 @@
     </div>
   </div>
 </div>
+<!-- Ebook section -->
+<div class="bg-dk-red">
+  <div class="pv6">
+    <h2 class="white center roboto w-100 tc f1 lh3 pl3-l ph3">
+      Don't crash going too fast: Hacking with speed and precision
+    </h2>
+    <div class="tc">
+      <a href="https://usa.fluidattacks.com/ebook/">
+        <button class="bannerbt pointer white pv2 ph4 roboto fw7 f5 mt3 dib bt-trans br2 b--white ba">Download eBook Now</button>
+      </a>
+    </div>
+  </div>
+</div>
 <!-- About us section -->
 <div class="mw9 center h6 pt6 pb6-ns mt5">
   <div class="tl fl-l w-40-l">
