fix(front): #3515 update ebook section
- Changed the text for the section
- Changed the link to download the ebook


Former-commit-id: 3f99efd95368c5b9597862d439a92f3eea99321b

--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -307,10 +307,10 @@
 <div class="bg-dk-red">
   <div class="pv6">
     <h2 class="white center roboto w-100 tc f1 lh3 pl3-l ph3">
-      Don't crash going too fast: Hacking with speed and precision
+      Are you going fast in the wrong direction? Hacking with speed and precision
     </h2>
     <div class="tc">
-      <a href="https://usa.fluidattacks.com/ebook/">
+      <a href="https://fluidattacks.docsend.com/view/fcq5m7gihzrfz2fu?utm_source=SalesForce&utm_campaign=4bddad20be-CAMPAIGN_08%2F07_Fluid&utm_medium=email&utm_term=0_1885d82ba1-4bddad20be-251550621">
         <button class="bannerbt pointer white pv2 ph4 roboto fw7 f5 mt3 dib bt-trans br2 b--white ba">Download eBook Now</button>
       </a>
     </div>
