fix(front): #3498 move security to about us
Former-commit-id: 142aaf68456e965da9938de88d9ed65e37efbac9

--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -110,6 +110,10 @@
         href="{{ SITEURL }}/about-us/partners/">
           Partners
         </a><br>
+        <a class="c-fluid-gray roboto f5 fw2 no-underline hv-fluid-bk lh-copy"
+        href="{{ SITEURL }}/security/">
+          Security
+        </a><br>
       </div>
     </div>
     <div class="pt4-l b dib v-top tl mh2">
@@ -137,10 +141,6 @@
         <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
         href="{{ SITEURL }}/subscription/" >
           Newsletter
-        </a><br>
-        <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
-        href="{{ SITEURL }}/security/" >
-          Security
         </a><br>
       </div>
     </div>
