--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -137,16 +137,16 @@
                             Partners
                         </a>
                       </li>
+                      <li class="pv2">
+                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
+                           href="{{ SITEURL }}/security/">
+                            Security
+                        </a>
+                      </li>
                     </ul>
                   </div>
                 </li>
               </div>
-              <li class="db pb3">
-                <a href="{{ SITEURL }}/security/"
-                   class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
-                  Security
-                </a>
-              </li>
               <li class="db pb3 mb5">
                 <a href="{{ SITEURL }}/blog/"
                    class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
