refac(front): #3466 update blog view
Former-commit-id: bb81d9c74bf9ed0359d5537838678ed4140b2543

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -494,6 +494,10 @@ $codeyellow: rgba(230, 219, 116, 1);
     }
   }
 
+  .sub-btn {
+    font-weight: 100;
+  }
+
   .button-rules {
     background-color: $button-red;
     border-radius: .25rem ;
