--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -147,23 +147,23 @@
     <div class="pt4-l b dib v-top tl mw-14">
       <div class="social-media">
         <a class="pr3 no-underline" href="https://www.instagram.com/fluidattacks/">
-          <img loading="lazy" class="grow-large hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-instagram.png"
+          <img loading="lazy" class="hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-instagram.png"
             alt="Instagram logo">
         </a>
         <a class="pr3 no-underline" href="https://www.facebook.com/Fluid-Attacks-267692397253577/">
-          <img loading="lazy" class="grow-large hv-fluid-rd w1" src="{{ SITEURL }}/theme/images/social-media/social-facebook.png"
+          <img loading="lazy" class="hv-fluid-rd w1" src="{{ SITEURL }}/theme/images/social-media/social-facebook.png"
             alt="Facebook logo">
         </a>
         <a class="pr3 no-underline" href="https://www.linkedin.com/company/fluidattacks/">
-          <img loading="lazy" class="grow-large hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-linkedin.png"
+          <img loading="lazy" class="hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-linkedin.png"
             alt="Linkedin logo">
         </a>
         <a class="pr3 no-underline" href="https://twitter.com/fluidattacks/">
-          <img loading="lazy" class="grow-large hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-twitter.png"
+          <img loading="lazy" class="hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-twitter.png"
             alt="Twitter logo">
         </a>
         <a class="pr3 no-underline" href="https://www.youtube.com/c/fluidattacks/">
-          <img loading="lazy" class="grow-large hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-youtube.png"
+          <img loading="lazy" class="hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-youtube.png"
             alt="Youtube logo">
         </a>
       </div>
