refac(cross): #3466.2 update blog view
- Added info at the beggining


Former-commit-id: 978c1a2657e6cf92b6ec286a06a6b398f622f271

--- a/new/theme/2020/templates/article.html
+++ b/new/theme/2020/templates/article.html
@@ -88,6 +88,12 @@
     <!-- Article subtitle -->
       <span class="db tc c-fluid-bk b f3 mt0">{{ article.subtitle }}</span>
     {% endif %}
+    <div class="pv3">
+      <p class="f5">
+        By {% for author in article.authors %}<a href="{{ SITEURL }}/{{ author.url }}">
+          {{ author }}</a>{% endfor %} | {{ article.date|strftime('%B %d, %Y') }}
+      </p>
+    </div>
     <div class="lh-2">
       {{ article.content }}
     </div>
