refac(cross): #3519.2 improove install page
- Changed the url from forces-ci to install
- Changed path in the breadcrumb
- Added subtitles in the content for a better experience


Former-commit-id: 948ddc9dc84bbaa58e968ba9040f23ffa181c64f

--- a/new/theme/2020/templates/page.html
+++ b/new/theme/2020/templates/page.html
@@ -201,10 +201,17 @@
               href=".">{{ page.title }}</a>
         </li>
       {% elif not page.rulesindex %}
-        <li class="dib mt0" >
-          <a class="white hover-white no-underline"
-              href=".">{{ page.title }}</a>
-        </li>
+        {% if not page.forcespage %}
+          <li class="dib mt0" >
+            <a class="white hover-white no-underline"
+                href=".">{{ page.title }}</a>
+          </li>
+        {% else %}
+          <li class="dib mt0" >
+            <a class="white hover-white no-underline"
+                href=".">Install</a>
+          </li>
+        {% endif %}
       {% endif %}
       </ul>
     </div>
