refac(cross): #3489.2 native english improvement
- The changes suggested by Santaularia were implemented on some pages


Former-commit-id: 86a503b43761ef7153b3b1efb8e59ccc5fe4e0cd

--- a/new/theme/2020/templates/products/drills.html
+++ b/new/theme/2020/templates/products/drills.html
@@ -111,7 +111,8 @@
         src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/products/drills/drills-3.png"
         alt="Young hacker smiling">
         <p class="roboto fw1 c-lightblack f5 lh-2">
-          Forget about False Positives.
+          Forget about false positives and <br>
+          false negatives.
         </p>
     </div>
     <div class="item-carousel mh4 pa0 dib v-top">
