--- a/new/theme/2020/templates/products/integrates.html
+++ b/new/theme/2020/templates/products/integrates.html
@@ -67,10 +67,12 @@
 </div>
 <div class="tc roboto w-100 center c-lightblack pb6">
   <p class="tl fw1 w-40-l w-50-m w90-s center f3 lh-2">
-    <b class="fw7">Integrates</b> is a communication platform where all project stakeholders
-    (e.g., developers, technicians, security analysts and managers) can interact,
-    and can also access information about all security issues and manage them.
-    Through Integrates, an internal or external security team communicates all
+    <b class="fw7">Integrates</b> is a platform which allows control of
+    the vulnerability testing and remediation processes.
+    In <b class="fw7">Integrates</b>, every project stakeholder
+    (e.g., developers, technicians, security analysts and managers) can interact
+    and access information about all security issues and manage them.
+    Through this platform, an internal or external security team communicates all
     security risks identified in a hacking project so that they can be remedied
     quickly, efficiently and effectively.
   </p>
