--- a/new/theme/2020/templates/use-cases/one-shot.html
+++ b/new/theme/2020/templates/use-cases/one-shot.html
@@ -132,14 +132,14 @@
 <div class="pb5 db-ns dn">
   <div>
     <h2 class="f2-l fw1 tc-ns tl f3 w6-ns roboto center w-90">
-      Start Your One-Shot Hacking Project Today
+      Start your one-shot hacking project today
     </h2>
   </div>
   <div class="tc">
     <a class="roboto fw1 f5 no-underline c-fluid-bk hv-fluid-dkred"
        href="{{ SITEURL }}/contact-us/">
       <span class="br2 bannerbt hv-bt-fluid-rd bt-pd contact-pd bt-trans white b roboto pointer mt2">
-          Contact now
+          Contact us now
       </span>
     </a>
   </div>
