--- a/new/theme/2020/templates/use-cases/continuous.html
+++ b/new/theme/2020/templates/use-cases/continuous.html
@@ -132,7 +132,7 @@
 <div class="pb5 db-ns dn">
   <div>
     <h2 class="f2-l fw1 tc-ns tl f3 w6-ns center roboto w-90">
-      Contact Us Now.
+      Contact us now
     </h2>
   </div>
   <div class="tc">
