refac(cross): #3444 recover deleted keywords
- Some deleted keywords were recovered


Former-commit-id: 6b95a0381ed5c5a6873339d2981ae3a57761e3d2

--- a/new/theme/2020/templates/products/integrates.html
+++ b/new/theme/2020/templates/products/integrates.html
@@ -7,7 +7,7 @@
       to all project stakeholders.">
 <meta name="keywords"
       content="Fluid Attacks, Products, Integrates, Stakeholders,
-      Security, Red Team Platform">
+      Security, Red Team Platform, Pentesting, Ethical Hacking">
 {% endblock meta %}
 
 {% block title %}
