integrates\feat(cross): #2220.33 center buttons with css
Closes #2287


Former-commit-id: 38f3de87999720d7d62bf34f30e96bb2884bc9a8

--- a/front/src/scenes/Dashboard/containers/ChartsGenericView/index.css
+++ b/front/src/scenes/Dashboard/containers/ChartsGenericView/index.css
@@ -5,3 +5,16 @@
 :local .separatorTitleFromCharts {
   padding-top: 35px;
 }
+
+:local .toolbarWrapper {
+  height: 50px;
+  position: relative;
+}
+
+:local .toolbarCentered {
+  left: 50%;
+  margin-right: -50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
