--- a/new/theme/2020/templates/base.html
+++ b/new/theme/2020/templates/base.html
@@ -296,6 +296,13 @@
               async
               src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/587d2441-4eaa-4f2e-b96b-b0a5dcb3fcf3-loader.js" >
       </script>
+      <!-- MAGNETICO PIXEL -->
+      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-PLM7M4D');</script>
+      <!-- END MAGNETICO PIXEL -->
     <!-- Google Tag Manager (noscript) -->
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PCDDL8T"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
