refac(cross): #3479.1 new design for resources
- Added access to Rules and Asserts


Former-commit-id: 20ba7b661a9b6b4b0cd0a920085062ccce2c3801

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -128,6 +128,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .forces-bg { background-image: url('../../images/products/forces/forces-cover.png'); }
 .thank-you-bg { background-image: url('../../images/contact-us/bg-thank-you-page.png'); }
 .careers-main-bg { background-image: url('../../images/careers/hero-main-1.png'); }
+.resources-bg { background-image: url('../../images/resources/resources-main.png'); }
 .error-bg { background-image: url('../../images/bg-error.png');}
 .b-max { font-weight: 999; }
 .nb-6 { margin-bottom: -6rem;}
@@ -263,6 +264,7 @@ $codeyellow: rgba(230, 219, 116, 1);
   .mr-13-l { margin-right: 13rem; }
   .f-title-l { font-size: 2rem; }
   .h50-l { height: 50rem; }
+  .h25-l { height: 25rem; }
   .w-45-l { width: 45%; }
   .w-50-l { width: 50%; }
   .h-menu { height: 9rem; }
